--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apexcharts": "^3.48.0",
     "bootstrap": "^3.4.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
